--- a/custom_pinter/pubspec.yaml
+++ b/custom_pinter/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_svg:
   provider:
   flutter_staggered_grid_view: ^0.3.0
+  font_awesome_flutter: ^8.8.1
+  animate_do: ^1.7.1
 
 dev_dependencies:
   flutter_test:
